// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Audit En Cours 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <p
      className="m-0"
    >
      <span
        className="capitalize"
      >
        première
      </span>
       
      étoile depuis le
       
      15 décembre 2021
    </p>
    <h2
      className="mb-4"
    >
      Objectif : 
      deuxième
       étoile
    </h2>
    <p
      className="m-0 fr-text-mention--grey"
      data-test="HeaderMessage"
    >
      Audit en cours
    </p>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Audit en cours (auditeur) 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <p
      className="m-0"
    >
      <span
        className="capitalize"
      >
        première
      </span>
       
      étoile depuis le
       
      15 décembre 2021
    </p>
    <h2
      className="mb-4"
    >
      Objectif : 
      deuxième
       étoile
    </h2>
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      className="fr-btn"
      data-test="ValiderAuditBtn"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      Valider l'audit
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Audit validé (auditeur) 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <p
      className="m-0"
    >
      <span
        className="capitalize"
      >
        première
      </span>
       
      étoile depuis le
       
      15 décembre 2021
    </p>
    <h2
      className="mb-4"
    >
      Objectif : 
      deuxième
       étoile
    </h2>
    <p
      className="m-0 fr-text-mention--grey"
      data-test="HeaderMessage"
    >
      Labellisation en cours
    </p>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Audit validé 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <p
      className="m-0"
    >
      <span
        className="capitalize"
      >
        première
      </span>
       
      étoile depuis le
       
      15 décembre 2021
    </p>
    <h2
      className="mb-4"
    >
      Objectif : 
      deuxième
       étoile
    </h2>
    <p
      className="m-0 fr-text-mention--grey"
      data-test="HeaderMessage"
    >
      Labellisation en cours
    </p>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Criteres Remplis 2 Eme Etoile 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <p
      className="m-0"
    >
      <span
        className="capitalize"
      >
        première
      </span>
       
      étoile depuis le
       
      15 décembre 2022
    </p>
    <h2
      className="mb-4"
    >
      Objectif : 
      deuxième
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      data-test="SubmitDemandeBtn"
      disabled={true}
      onClick={[Function]}
    >
      Demander un audit
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Demande Envoyee 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="mb-4"
    >
      Objectif : 
      première
       étoile
    </h2>
    <p
      className="m-0 fr-text-mention--grey"
      data-test="HeaderMessage"
    >
      Demande envoyée
    </p>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Demande Envoyee 2 Eme Etoile 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <p
      className="m-0"
    >
      <span
        className="capitalize"
      >
        première
      </span>
       
      étoile depuis le
       
      15 décembre 2021
    </p>
    <h2
      className="mb-4"
    >
      Objectif : 
      deuxième
       étoile
    </h2>
    <p
      className="m-0 fr-text-mention--grey"
      data-test="HeaderMessage"
    >
      Demande envoyée
    </p>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Demande Envoyee COT 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="mb-4"
    >
      Objectif : 
      première
       étoile
    </h2>
    <p
      className="m-0 fr-text-mention--grey"
      data-test="HeaderMessage"
    >
      Demande envoyée
    </p>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Labellisable 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="mb-4"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      data-test="SubmitDemandeBtn"
      disabled={true}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Labellisable COT 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="mb-4"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start fr-mr-2w"
      data-test="1ereEtoileCOT"
      disabled={false}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
    <button
      className="fr-btn self-start"
      data-test="SubmitDemandeBtn"
      disabled={false}
      onClick={[Function]}
    >
      Demander un audit
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Non Auditable COT 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="mb-4"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start fr-mr-2w"
      data-test="1ereEtoileCOT"
      disabled={true}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
    <button
      className="fr-btn self-start"
      data-test="SubmitDemandeBtn"
      disabled={true}
      onClick={[Function]}
    >
      Demander un audit
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Non Labellisable 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="mb-4"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      data-test="SubmitDemandeBtn"
      disabled={true}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Non Labellisable COT 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="mb-4"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start fr-mr-2w"
      data-test="1ereEtoileCOT"
      disabled={true}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
    <button
      className="fr-btn self-start"
      data-test="SubmitDemandeBtn"
      disabled={false}
      onClick={[Function]}
    >
      Demander un audit
    </button>
  </div>
</div>
`;
